# bit-pop

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CP029198.1.fasta  Cargo.toml  LICENSE  PLAN.md  README.md  analyze_benchmark_new.ps1  bench_aureus_new.sam  bench_cerevisiae_new.sam  fix_headers_and_group.ps1  generate_test_reads.rs  paper.tex  references.bib  simulate_reads.py  simulated_aureus_5k_new.fastq  simulated_cerevisiae_5k_new.fastq  simulated_ecoli_10k_new.fastq  snp_profiles_direct.json  snp_stats_direct.txt  step0_extract_snps.py  step0_extract_snps_v2.py  step0_extract_snps_v5.py
.cargo/: config.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: benchmark.rs
bioconda-recipe/: bld.bat  build.sh  meta.yaml
data/reads/: test_R1.fastq  test_R2.fastq
docs/: CITATION.cff  paper.tex  paper_new.tex  paper_submission.tex  references.bib
scripts/: analyze_discordant.py  analyze_em_comparison.py  bitpop-workflow.py  compare_cami_results.py  em_classifier.py  extract_cami_20k.py  run_pacbio_benchmark.py  split_paired_end.py
src/: align.rs  cache.rs  delta.rs  em.rs  fasta.rs  fastq.rs  fm.rs  index_manager.rs  lib.rs  main.rs  ncbi.rs  persisted.rs  rank.rs  sam.rs  serialize.rs  snp.rs
tests/: integration_tests.rs
