[package]
name = "bit-pop"
version = "0.2.0"
edition = "2021"
description = "Multi-stage genomic read mapper: k-mer inverted index → bit-level alignment → multi-genome ranking"
license = "MIT"
authors = ["Mladen Popovic <mladenpop@gmail.com>"]

[dependencies]
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
zstd = "0.13"
sha2 = "0.10"
fastq = "0.3"
libsais = { version = "0.2", default-features = false }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
thiserror = "2"
indicatif = "0.17"

[features]
mmap = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
